--- a/project/09-modularize-es6/CMakeLists.txt
+++ b/project/09-modularize-es6/CMakeLists.txt
@@ -3,16 +3,12 @@ project(09_modularize_es6 LANGUAGES CXX)
 
 add_executable(09_modularize_es6 main.cpp)
 target_link_options(09_modularize_es6 PRIVATE
-    "-gsource-map"
-    "-sASSERTIONS=1"
-    "-sSAFE_HEAP=1"
+    $<$<CONFIG:Debug>:-gsource-map -sASSERTIONS=1 -sSAFE_HEAP=1>
     "-sEXPORT_ES6=1"
 )
 
 add_executable(09_modularize_es6_alias main.cpp)
 target_link_options(09_modularize_es6_alias PRIVATE
-    "-gsource-map"
-    "-sASSERTIONS=1"
-    "-sSAFE_HEAP=1"
+    $<$<CONFIG:Debug>:-gsource-map -sASSERTIONS=1 -sSAFE_HEAP=1>
     "-sEXPORT_ES6=1"
 )
