--- a/project/10-instantiate/CMakeLists.txt
+++ b/project/10-instantiate/CMakeLists.txt
@@ -4,5 +4,5 @@ project(10_instantiate LANGUAGES CXX)
 add_executable(10_instantiate main.cpp)
 target_link_options(10_instantiate PRIVATE
     $<$<CONFIG:Debug>:-gsource-map -sASSERTIONS=1 -sSAFE_HEAP=1>
-    "-sEXPORT_ES6"
+    "-sEXPORT_ES6=1"
 )
