--- a/project/14-nodejs/CMakeLists.txt
+++ b/project/14-nodejs/CMakeLists.txt
@@ -4,5 +4,5 @@ project(14_nodejs LANGUAGES CXX)
 add_executable(14_nodejs main.cpp)
 target_link_options(14_nodejs PRIVATE
     $<$<CONFIG:Debug>:-gsource-map -sASSERTIONS=1 -sSAFE_HEAP=1>
-    "-sEXPORT_ES6"
+    "-sEXPORT_ES6=1"
 )
